# vcp-media-manager

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  servers.json.example
src/: client.rs  config.rs  device_store.rs  main.rs  model.rs  play_urls.rs  registry.rs  routes.rs  state.rs
